@@ -1,5 +1,8 @@
 2010-02-23  Romain Francois <romain@r-enthusiasts.com>
 
+	* src/Rcpp/SimpleVector.h: added the class SimpleVector::Row
+	to support STL algorithms working on a row of a matrix. 
+
 	* src/Rcpp/internal/ListInitialization.h: new class that 
 	supports use of operator, (inspired from blitz) giving this 
 	notation: IntegerVector x(3); x = 0, 1, 2 ;
